update pom and docker